--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 			/*noinspection CssInvalidPropertyValue,CssOverwrittenProperties*/
 			canvas {
+				width: 100%;
 				height: 100%;
 				margin: auto;
 				padding: 0;
@@ -35,6 +36,7 @@
 				image-rendering: -o-crisp-edges;
 				image-rendering: crisp-edges;
 				image-rendering: pixelated;
+				display: block;
 			}
 
 			.spinner {
@@ -148,6 +150,15 @@
 			var statusElement = document.getElementById('status');
 			var progressElement = document.getElementById('progress');
 			var spinnerElement = document.getElementById('spinner');
+			var canvas = document.getElementById('canvas');
+
+			// 🔥 Fullscreen resize support
+			function resizeCanvas() {
+				canvas.width = window.innerWidth;
+				canvas.height = window.innerHeight;
+			}
+			window.addEventListener('resize', resizeCanvas);
+			resizeCanvas();
 
 			var Module = {
 				preRun: [],
@@ -157,11 +168,6 @@
 					if (element) element.value = ''; // clear browser cache
 					return function (text) {
 						if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-						// These replacements are necessary if you render to raw HTML
-						//text = text.replace(/&/g, "&amp;");
-						//text = text.replace(/</g, "&lt;");
-						//text = text.replace(/>/g, "&gt;");
-						//text = text.replace('\n', '<br>', 'g');
 						console.log(text);
 						if (element) {
 							element.value += text + "\n";
@@ -174,11 +180,7 @@
 					console.error(text);
 				},
 				canvas: (function () {
-					var canvas = document.getElementById('canvas');
-
-					// As a default initial behavior, pop up an alert when webgl context is lost. To make your
-					// application robust, you may want to override this behavior before shipping!
-					// See http://www.khronos.org/registry/webgl/specs/latest/1.0/#5.15.2
+					// use the resized canvas
 					canvas.addEventListener("webglcontextlost", function (e) {
 						alert('WebGL context lost. You will need to reload the page.');
 						e.preventDefault();
