--- a/index.html
+++ b/index.html
@@ -1,230 +1,310 @@
 <!doctype html>
 <!--suppress HtmlFormInputWithoutLabel, JSDeprecatedSymbols -->
 <html lang="en-us">
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-		<title>Sonic CD</title>
+	<title>Sonic CD</title>
 
-		<link type="text/css" rel="stylesheet" href="css/fonts.css" />
-		<style type="text/css">
-			html, body {
-				font-family: arial, sans-serif;
-				margin: 0;
-				padding: 0;
-				width: 100%;
-				height: 100%;
-				overflow: hidden;
-				background-color: #000;
-				text-align: center;
-			}
+	<link type="text/css" rel="stylesheet" href="css/fonts.css" />
+	<style type="text/css">
+		html, body {
+			font-family: arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+			background-color: #000;
+			text-align: center;
+		}
 
-			/*noinspection CssInvalidPropertyValue,CssOverwrittenProperties*/
-			canvas {
-				width: 100%;
-				height: 100%;
-				margin: auto;
-				padding: 0;
-				border: 0 none;
-				background-color: #000;
-				-ms-interpolation-mode: nearest-neighbor;
-				image-rendering: optimizeSpeed;
-				image-rendering: -webkit-optimize-contrast;
-				image-rendering: -moz-crisp-edges;
-				image-rendering: -o-crisp-edges;
-				image-rendering: crisp-edges;
-				image-rendering: pixelated;
-				display: block;
-			}
+		canvas {
+			width: 100%;
+			height: 100%;
+			margin: auto;
+			padding: 0;
+			border: 0 none;
+			background-color: #000;
+			-ms-interpolation-mode: nearest-neighbor;
+			image-rendering: optimizeSpeed;
+			image-rendering: -webkit-optimize-contrast;
+			image-rendering: -moz-crisp-edges;
+			image-rendering: -o-crisp-edges;
+			image-rendering: crisp-edges;
+			image-rendering: pixelated;
+			display: block;
+		}
 
-			.spinner {
-				height: 30px;
-				width: 30px;
-				margin: 20px 0 0 20px;
-				display: inline-block;
-				vertical-align: top;
+		.spinner {
+			height: 30px;
+			width: 30px;
+			margin: 20px 0 0 20px;
+			display: inline-block;
+			vertical-align: top;
+			-webkit-animation: rotation .8s linear infinite;
+			-moz-animation: rotation .8s linear infinite;
+			-o-animation: rotation .8s linear infinite;
+			animation: rotation 0.8s linear infinite;
+			border-left: 5px solid rgb(235, 235, 235);
+			border-right: 5px solid rgb(235, 235, 235);
+			border-bottom: 5px solid rgb(235, 235, 235);
+			border-top: 5px solid rgb(120, 120, 120);
+			border-radius: 100%;
+			background-color: rgb(189, 215, 46);
+		}
 
-				-webkit-animation: rotation .8s linear infinite;
-				-moz-animation: rotation .8s linear infinite;
-				-o-animation: rotation .8s linear infinite;
-				animation: rotation 0.8s linear infinite;
+		@-webkit-keyframes rotation { from { -webkit-transform: rotate(0deg); } to { -webkit-transform: rotate(360deg); } }
+		@-moz-keyframes rotation { from { -moz-transform: rotate(0deg); } to { -moz-transform: rotate(360deg); } }
+		@-o-keyframes rotation { from { -o-transform: rotate(0deg); } to { -o-transform: rotate(360deg); } }
+		@keyframes rotation { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
-				border-left: 5px solid rgb(235, 235, 235);
-				border-right: 5px solid rgb(235, 235, 235);
-				border-bottom: 5px solid rgb(235, 235, 235);
-				border-top: 5px solid rgb(120, 120, 120);
+		#status {
+			display: inline-block;
+			vertical-align: top;
+			margin-top: 30px;
+			margin-left: 20px;
+			font-weight: bold;
+			color: rgb(120, 120, 120);
+		}
 
-				border-radius: 100%;
-				background-color: rgb(189, 215, 46);
-			}
+		#progress {
+			height: 20px;
+			width: 300px;
+		}
 
-			@-webkit-keyframes rotation {
-				from {
-					-webkit-transform: rotate(0deg);
-				}
-				to {
-					-webkit-transform: rotate(360deg);
-				}
-			}
+		#output {
+			width: 100%;
+			height: 200px;
+			margin: 10px auto 0;
+			border-left: 0;
+			border-right: 0;
+			padding-left: 0;
+			padding-right: 0;
+			display: block;
+			background-color: black;
+			color: white;
+			font-family: 'Lucida Console', Monaco, monospace;
+			outline: none;
+		}
 
-			@-moz-keyframes rotation {
-				from {
-					-moz-transform: rotate(0deg);
-				}
-				to {
-					-moz-transform: rotate(360deg);
-				}
-			}
+		/* --- Mobile Controls --- */
+		#controls {
+			position: absolute;
+			bottom: 30px;
+			width: 100%;
+			display: flex;
+			justify-content: space-between;
+			padding: 0 40px;
+			z-index: 10;
+			pointer-events: none;
+		}
+		#dpad {
+			display: grid;
+			grid-template-columns: 60px 60px 60px;
+			grid-template-rows: 60px 60px 60px;
+			gap: 5px;
+			pointer-events: auto;
+		}
+		#dpad .control-btn:nth-child(2) { grid-column: 2; grid-row: 1; }
+		#dpad .control-btn:nth-child(4) { grid-column: 1; grid-row: 2; }
+		#dpad .control-btn:nth-child(5) { grid-column: 2; grid-row: 2; }
+		#dpad .control-btn:nth-child(6) { grid-column: 3; grid-row: 2; }
+		#dpad .control-btn:nth-child(8) { grid-column: 2; grid-row: 3; }
+		#action {
+			display: flex;
+			align-items: center;
+			gap: 20px;
+			pointer-events: auto;
+		}
+		.control-btn {
+			width: 60px;
+			height: 60px;
+			background: rgba(255,255,255,0.2);
+			border: 2px solid white;
+			border-radius: 50%;
+			color: white;
+			font-weight: bold;
+			font-size: 20px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			user-select: none;
+			-webkit-user-select: none;
+			touch-action: none;
+		}
+		.control-btn:active {
+			background: rgba(255,255,255,0.5);
+		}
+	</style>
+</head>
+<body>
+	<div class="spinner" id="spinner" style="display: none;"></div>
+	<div id="status" style="display: none;">Downloading...</div>
+	<progress id="progress" value="0" max="100" hidden="hidden"></progress>
+	<canvas id="canvas" onclick="window.focus();" oncontextmenu="event.preventDefault();"></canvas>
+	<textarea id="output" style="display: none;" rows="8"></textarea>
 
-			@-o-keyframes rotation {
-				from {
-					-o-transform: rotate(0deg);
-				}
-				to {
-					-o-transform: rotate(360deg);
-				}
-			}
+	<!-- Mobile Controls -->
+	<div id="controls">
+		<div id="dpad">
+			<div></div>
+			<div class="control-btn" data-key="ArrowUp">↑</div>
+			<div></div>
+			<div class="control-btn" data-key="ArrowLeft">←</div>
+			<div></div>
+			<div class="control-btn" data-key="ArrowRight">→</div>
+			<div></div>
+			<div class="control-btn" data-key="ArrowDown">↓</div>
+			<div></div>
+		</div>
+		<div id="action">
+			<div class="control-btn" data-key="KeyZ">Z</div>
+		</div>
+	</div>
 
-			@keyframes rotation {
-				from {
-					transform: rotate(0deg);
-				}
-				to {
-					transform: rotate(360deg);
-				}
-			}
-
-			#status {
-				display: inline-block;
-				vertical-align: top;
-				margin-top: 30px;
-				margin-left: 20px;
-				font-weight: bold;
-				color: rgb(120, 120, 120);
-			}
-
-			#progress {
-				height: 20px;
-				width: 300px;
-			}
-
-			#output {
-				width: 100%;
-				height: 200px;
-				margin: 10px auto 0;
-				border-left: 0;
-				border-right: 0;
-				padding-left: 0;
-				padding-right: 0;
-				display: block;
-				background-color: black;
-				color: white;
-				font-family: 'Lucida Console', Monaco, monospace;
-				outline: none;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="spinner" id="spinner" style="display: none;"></div>
-		<div id="status" style="display: none;">Downloading...</div>
-		<progress id="progress" value="0" max="100" hidden="hidden"></progress>
-		<canvas id="canvas" onclick="window.focus();" oncontextmenu="event.preventDefault();"></canvas>
-		<textarea id="output" style="display: none;" rows="8"></textarea>
-
-		<script type="text/javascript">
-			if ('serviceWorker' in navigator) {
-				navigator.serviceWorker.register('sw.js').then(function(registration) {
-					registration.addEventListener('updatefound', function() {
-						var installingWorker = registration.installing;
-						console.log('A new service worker is being installed:', installingWorker);
-					});
-				}, function(err) {
-					console.log('ServiceWorker registration failed: ', err);
+	<script type="text/javascript">
+		if ('serviceWorker' in navigator) {
+			navigator.serviceWorker.register('sw.js').then(function(registration) {
+				registration.addEventListener('updatefound', function() {
+					var installingWorker = registration.installing;
+					console.log('A new service worker is being installed:', installingWorker);
 				});
-			} else {
-				console.log('ServiceWorker not supported');
-			}
+			}, function(err) {
+				console.log('ServiceWorker registration failed: ', err);
+			});
+		} else {
+			console.log('ServiceWorker not supported');
+		}
 
-			var statusElement = document.getElementById('status');
-			var progressElement = document.getElementById('progress');
-			var spinnerElement = document.getElementById('spinner');
-			var canvas = document.getElementById('canvas');
+		var statusElement = document.getElementById('status');
+		var progressElement = document.getElementById('progress');
+		var spinnerElement = document.getElementById('spinner');
+		var canvas = document.getElementById('canvas');
 
-			// 🔥 Fullscreen resize support
-			function resizeCanvas() {
-				canvas.width = window.innerWidth;
-				canvas.height = window.innerHeight;
-			}
-			window.addEventListener('resize', resizeCanvas);
-			resizeCanvas();
+		// 🔥 Fullscreen resize support
+		function resizeCanvas() {
+			canvas.width = window.innerWidth;
+			canvas.height = window.innerHeight;
+		}
+		window.addEventListener('resize', resizeCanvas);
+		resizeCanvas();
 
-			var Module = {
-				preRun: [],
-				postRun: [],
-				print: (function () {
-					var element = document.getElementById('output');
-					if (element) element.value = ''; // clear browser cache
-					return function (text) {
-						if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-						console.log(text);
-						if (element) {
-							element.value += text + "\n";
-							element.scrollTop = element.scrollHeight; // focus on bottom
-						}
-					};
-				})(),
-				printErr: function (text) {
+		var Module = {
+			preRun: [],
+			postRun: [],
+			print: (function () {
+				var element = document.getElementById('output');
+				if (element) element.value = '';
+				return function (text) {
 					if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-					console.error(text);
-				},
-				canvas: (function () {
-					// use the resized canvas
-					canvas.addEventListener("webglcontextlost", function (e) {
-						alert('WebGL context lost. You will need to reload the page.');
-						e.preventDefault();
-					}, false);
-
-					return canvas;
-				})(),
-				setStatus: function (text) {
-					if (!Module.setStatus.last) Module.setStatus.last = {time: Date.now(), text: ''};
-					if (text === Module.setStatus.last.text) return;
-					var m = text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/);
-					var now = Date.now();
-					if (m && now - Module.setStatus.last.time < 30) return; // if this is a progress update, skip it if too soon
-					Module.setStatus.last.time = now;
-					Module.setStatus.last.text = text;
-					if (m) {
-						text = m[1];
-						progressElement.value = parseInt(m[2]) * 100;
-						progressElement.max = parseInt(m[4]) * 100;
-						progressElement.hidden = false;
-						spinnerElement.hidden = false;
-					} else {
-						progressElement.value = null;
-						progressElement.max = null;
-						progressElement.hidden = true;
-						if (!text) spinnerElement.style.display = 'none';
+					console.log(text);
+					if (element) {
+						element.value += text + "\n";
+						element.scrollTop = element.scrollHeight;
 					}
-					statusElement.innerHTML = text;
-				},
-				totalDependencies: 0,
-				monitorRunDependencies: function (left) {
-					this.totalDependencies = Math.max(this.totalDependencies, left);
-					Module.setStatus(left ? 'Preparing... (' + (this.totalDependencies - left) + '/' + this.totalDependencies + ')' : 'All downloads complete.');
-				}
-			};
-			Module.setStatus('Downloading...');
-			window.onerror = function () {
-				Module.setStatus('Exception thrown, see JavaScript console');
-				spinnerElement.style.display = 'none';
-				Module.setStatus = function (text) {
-					if (text) Module.printErr('[post-exception status] ' + text);
 				};
+			})(),
+			printErr: function (text) {
+				if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
+				console.error(text);
+			},
+			canvas: (function () {
+				canvas.addEventListener("webglcontextlost", function (e) {
+					alert('WebGL context lost. You will need to reload the page.');
+					e.preventDefault();
+				}, false);
+				return canvas;
+			})(),
+			setStatus: function (text) {
+				if (!Module.setStatus.last) Module.setStatus.last = {time: Date.now(), text: ''};
+				if (text === Module.setStatus.last.text) return;
+				var m = text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/);
+				var now = Date.now();
+				if (m && now - Module.setStatus.last.time < 30) return;
+				Module.setStatus.last.time = now;
+				Module.setStatus.last.text = text;
+				if (m) {
+					text = m[1];
+					progressElement.value = parseInt(m[2]) * 100;
+					progressElement.max = parseInt(m[4]) * 100;
+					progressElement.hidden = false;
+					spinnerElement.hidden = false;
+				} else {
+					progressElement.value = null;
+					progressElement.max = null;
+					progressElement.hidden = true;
+					if (!text) spinnerElement.style.display = 'none';
+				}
+				statusElement.innerHTML = text;
+			},
+			totalDependencies: 0,
+			monitorRunDependencies: function (left) {
+				this.totalDependencies = Math.max(this.totalDependencies, left);
+				Module.setStatus(left ? 'Preparing... (' + (this.totalDependencies - left) + '/' + this.totalDependencies + ')' : 'All downloads complete.');
+			}
+		};
+		Module.setStatus('Downloading...');
+		window.onerror = function () {
+			Module.setStatus('Exception thrown, see JavaScript console');
+			spinnerElement.style.display = 'none';
+			Module.setStatus = function (text) {
+				if (text) Module.printErr('[post-exception status] ' + text);
 			};
-		</script>
-		<script async="async" defer="defer" type="text/javascript" src="index.js"></script>
-	</body>
+		};
+
+		/* --- Mobile Controls Logic --- */
+		const activeKeys = new Set();
+		const controls = document.querySelectorAll('.control-btn');
+
+		function sendKeyEvent(code, type) {
+			const event = new KeyboardEvent(type, { code, key: code });
+			Object.defineProperty(event, 'keyCode', { get: () => eventKeyCode(code) });
+			Object.defineProperty(event, 'which', { get: () => eventKeyCode(code) });
+			window.dispatchEvent(event);
+		}
+
+		function eventKeyCode(code) {
+			switch(code) {
+				case 'ArrowUp': return 38;
+				case 'ArrowDown': return 40;
+				case 'ArrowLeft': return 37;
+				case 'ArrowRight': return 39;
+				case 'KeyZ': return 90;
+				default: return 0;
+			}
+		}
+
+		controls.forEach(btn => {
+			const keyCode = btn.getAttribute("data-key");
+
+			btn.addEventListener("touchstart", e => {
+				e.preventDefault();
+				if (!activeKeys.has(keyCode)) {
+					activeKeys.add(keyCode);
+					sendKeyEvent(keyCode, "keydown");
+				}
+			}, { passive: false });
+
+			btn.addEventListener("touchend", e => {
+				e.preventDefault();
+				if (activeKeys.has(keyCode)) {
+					activeKeys.delete(keyCode);
+					sendKeyEvent(keyCode, "keyup");
+				}
+			}, { passive: false });
+
+			btn.addEventListener("touchcancel", e => {
+				e.preventDefault();
+				if (activeKeys.has(keyCode)) {
+					activeKeys.delete(keyCode);
+					sendKeyEvent(keyCode, "keyup");
+				}
+			}, { passive: false });
+		});
+	</script>
+	<script async defer src="index.js"></script>
+</body>
 </html>
