--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
 	<div id="status" style="display: none;">Downloading...</div>
 	<progress id="progress" value="0" max="100" hidden="hidden"></progress>
 	<canvas id="canvas" onclick="window.focus();" oncontextmenu="event.preventDefault();"></canvas>
-	<textarea id="output" style="display: none;" rows="8"></textarea>
 
+
+	<textarea id="output" style="display: none;" rows="8"></textarea>
+	
 	<!-- Mobile Controls -->
 	<div id="controls">
 		<div id="dpad">
@@ -191,6 +193,27 @@
 		}
 		window.addEventListener('resize', resizeCanvas);
 		resizeCanvas();
+
+		canvas.addEventListener("click", () => {
+    if (!document.fullscreenElement) {
+        canvas.requestFullscreen();
+    } else {
+        document.exitFullscreen();
+    }
+});
+		// Handle fullscreen changes
+document.addEventListener("fullscreenchange", () => {
+	if (document.fullscreenElement) {
+		// Fullscreen → match screen resolution
+		canvas.width = screen.width;
+		canvas.height = screen.height;
+		canvas.style.width = "100%";
+		canvas.style.height = "100%";
+	} else {
+		// Exited fullscreen → go back to window size
+		resizeCanvas();
+	}
+});
 
 		var Module = {
 			preRun: [],
